--- a/app/src/main/res/layout/listview_notes_adapter.xml
+++ b/app/src/main/res/layout/listview_notes_adapter.xml
@@ -28,9 +28,9 @@
             android:id="@+id/titlenote"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
+            android:layout_marginStart="34dp"
             android:layout_marginTop="2dp"
-            android:layout_marginEnd="4dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="2dp"
             android:text="@string/title"
             android:textAlignment="center"
@@ -41,7 +41,19 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            card_view:layout_constraintEnd_toStartOf="@+id/popupbtn" />
+
+        <ImageView
+            android:id="@+id/popupbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="2dp"
+            android:background="?selectableItemBackgroundBorderless"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintTop_toTopOf="@+id/titlenote"
+            card_view:srcCompat="@drawable/baseline_expand_more_black_24" />
+
     </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </FrameLayout>
