--- a/app/src/main/res/layout/dialog_add_homework.xml
+++ b/app/src/main/res/layout/dialog_add_homework.xml
@@ -68,8 +68,32 @@
             android:id="@+id/datehomework"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight=".3"
+            android:layout_weight=".7"
             android:text="@string/select_date"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/select_color"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginLeft="50dp"
+            android:background="@color/white"
+            android:text="@string/select_color"
+            android:textAlignment="center"
             android:textAllCaps="true"
             android:textSize="18sp"
             android:textStyle="bold" />
