--- a/app/src/main/res/layout/listview_teachers_adapter.xml
+++ b/app/src/main/res/layout/listview_teachers_adapter.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/teacher_cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
