--- a/app/src/main/res/layout/listview_notes_adapter.xml
+++ b/app/src/main/res/layout/listview_notes_adapter.xml
@@ -6,6 +6,7 @@
     android:descendantFocusability="beforeDescendants">
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/notes_cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
